fix horizontal scroll that shouldn't happen on smaller screens

--- a/less/power-players.less
+++ b/less/power-players.less
@@ -409,6 +409,10 @@ body.embed {
 
 /* Media queries */
 @media (max-width: 767px) {
+  header {
+    margin-right: 0;
+    margin-left: 0;
+  }
   #select-a-state {
     .state {
       width: 25%;
